--- a/app/views/business_loan/step2.html.erb
+++ b/app/views/business_loan/step2.html.erb
@@ -46,7 +46,7 @@
             <label>Full Name
               <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="As per aadhar card records, to ensure your application gets successfully processed."></i>
             </label>
-            <%= f.text_field(:full_name, class: "form-control") %>
+            <%= f.text_field(:full_name, class: "form-control", value: "#{session[:bl_full_name] ? session[:bl_full_name] : f.object.full_name}") %>
           </div>
         </div>        
         <div class="col-md-6">
@@ -64,7 +64,7 @@
             <label>Email
               <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Share the correct email address to ensure timely communication regarding this application."></i>
             </label>
-            <%= f.email_field(:email, class: "form-control") %>
+            <%= f.email_field(:email, class: "form-control", value: "#{session[:bl_email] ? session[:bl_email] : f.object.email}") %>
           </div>
         </div>
       </div>
