--- a/app/views/credit_card/step1.html.erb
+++ b/app/views/credit_card/step1.html.erb
@@ -17,7 +17,9 @@
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.number_field(:mobile_number, class: "form-control") %>
+            <%= f.number_field(:mobile_number, class: "form-control", value: "#{session[:cc_mobile_number].nil? ? 
+                f.object.mobile_number : session[:cc_mobile_number]
+              }") %>
           </div>
         </div>        
         <div class="col-md-2"></div>
