--- a/app/views/credit_card/step2.html.erb
+++ b/app/views/credit_card/step2.html.erb
@@ -24,7 +24,7 @@
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.text_field(:full_name, class: "form-control") %>
+            <%= f.text_field(:full_name, class: "form-control", value: "#{session[:cc_full_name] ? session[:cc_full_name] : f.object.full_name}") %>
           </div>
         </div>
         <div class="col-md-4">
@@ -46,7 +46,7 @@
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.text_field(:email, class: "form-control") %>
+            <%= f.text_field(:email, class: "form-control", value: "#{session[:cc_email] ? session[:cc_email] : f.object.email}") %>
           </div>
         </div>
         <div class="col-md-4">
