--- a/app/views/home/home_loan.html.erb
+++ b/app/views/home/home_loan.html.erb
@@ -9,7 +9,7 @@
 </section>
 <div class="container custom-application">
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-6">
       <p>Please provide following details for the application</p>
       <%= form_for @home_loan, :url => { :action => "home_loan" }, remote: false, html: { class: "custom_personal_loan" } do |f| %>
           <div class="row">
@@ -40,6 +40,12 @@
           <br>
           <p class="text-center"><span style="color: blue;">Click on this link to apply directly.</span> <%= link_to "Apply", home_loan_path('step1'), method: :get, style: "color: #0000ff; font-weight: 500;" %></p><br>
       <%end%>
+    </div>
+    <div class="col-md-6">
+      <h4 class="crd-heading">
+        <br><br>
+        <span>Fill out the form to help us understand your home loan requirements to enable us to present the best offers!</span><br><br>You may also call us on <a href="tel:+918806644344">+91-88066-44344</a> if you want to discuss any particular requirements you may have.        
+      </h4>
     </div>
   </div>
   <div class="row">
