--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,9 +109,9 @@
             <%= link_to custom_credit_card_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Credit Card</h1>
-                <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
+                <p class="product-desc">Learn about the best credit card offers and how to maintain it?</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/cc-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/cc-icon.svg", style: "width: 25%; float: right; margin-top: 10px;" %>
                 </div>
               </div>
             <%end%>
@@ -120,9 +120,9 @@
             <%= link_to custom_personal_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Personal Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
+                <p class="product-desc">Know everything about documents, eligibility, interest rates, and more...</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/personal-loan-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/personal-loan-icon.svg", style: "width: 25%; float: right;" %>
                 </div>
               </div>
             <%end%>
@@ -131,9 +131,9 @@
             <%= link_to custom_transfer_personal_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Transfer Personal Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit scors</p>
+                <p class="product-desc">All formalities to transfer from existing to new bank</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/transfer-personal-loan-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/transfer-personal-loan-icon.svg", style: "width: 25%; float: right;     margin-top: 10px;" %>
                 </div>
               </div>
             <%end%>
@@ -142,9 +142,9 @@
             <%= link_to custom_business_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Business Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
+                <p class="product-desc">Learn about the procedure & banks offering best interest</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/business-loan-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/business-loan-icon.svg", style: "width: 25%; float: right; margin-top: 6px;" %>
                 </div>
               </div>
             <%end%>
@@ -153,11 +153,11 @@
             <%= link_to custom_professional_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Professional Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit score</p>
+                <p class="product-desc">Know everything about professional category, loan limits and more...</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/professional-loan-icon.svg", style: "width: 26%;
+                  <%= image_tag "icons/professional-loan-icon.svg", style: "width: 20%;
                   float: right;
-                  top: 15px;
+                  top: 5px;
                   position: relative;" %>
                 </div>
               </div>
@@ -167,12 +167,11 @@
             <%= link_to custom_home_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Home Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
+                <p class="product-desc">Best banks, best Interest rates, loan transfer, are you eligible, & more</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/home-loan-icon.svg", style: "width: 35%;
+                  <%= image_tag "icons/home-loan-icon.svg", style: "width: 24%;
                     float: right;
-                    bottom: 15px;
-                    position: relative;" %>
+                    margin-top: -5px;" %>
                 </div>
               </div>
             <%end%>
@@ -183,9 +182,9 @@
             <%= link_to custom_transfer_home_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Transfer Home Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit score </p>
+                <p class="product-desc">Know about the formalities and eligibility with best banks.</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/tr-home-loan-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/tr-home-loan-icon.svg", style: "width: 25%; float: right;" %>
                 </div>
               </div>
             <%end%>
@@ -194,12 +193,11 @@
             <%= link_to custom_loan_against_property_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Loan Against Property</h1>
-                <p class="product-desc">Check, track &amp; build your credit score </p>
+                <p class="product-desc">Learn about Eligibility, Documents, & Interest Rates on LAP, and more.</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/loan-against-property-icon.svg", style: "width: 35%;
+                  <%= image_tag "icons/loan-against-property-icon.svg", style: "width: 24%;
                     float: right;
-                    bottom: 15px;
-                    position: relative;" %>
+                    margin-top: -15px;" %>
                 </div>
               </div>
             <%end%>
@@ -208,9 +206,9 @@
             <%= link_to custom_new_car_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">New Car Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
+                <p class="product-desc">Auto loan to buy new car. Banks with best interest rates, 90% financing</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/new-car-loan-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/new-car-loan-icon.svg", style: "width: 25%; float: right; margin-top: 10px;" %>
                 </div>
               </div>
             <%end%>
@@ -219,31 +217,31 @@
             <%= link_to custom_used_car_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Used Car Loan</h1>
-                <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
+                <p class="product-desc">Find out about best banks offering pre-owned car loan</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/used-car-loan-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/used-car-loan-icon.svg", style: "width: 25%; float: right;" %>
                 </div>
               </div>
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to "/", method: :get do %>
+            <%= link_to custom_gold_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Gold Loan</h1>
-                <p class="product-desc">Check, tcredit score for best loan &amp; card offers comming soon...</p>
+                <p class="product-desc">Best gold loan partners in the market and learn about its documentation process</p>
                 <div class="product-icon">
-                  <%= image_tag "icons/gold-loan-icon.svg", style: "width: 35%; float: right;" %>
+                  <%= image_tag "icons/gold-loan-icon.svg", style: "width: 26%; float: right; margin-top: 5px;" %>
                 </div>
               </div>
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to "/", method: :get do %>
+            <%= link_to custom_insurance_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Insurance</h1>
                 <div class="product-icon">
-                <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card comming soon...</p>
-                  <%= image_tag "icons/insurance-icon.svg", style: "width: 28%; float: right;" %>
+                <p class="product-desc">Insurance plans with income friendly premiums & easy slaims settlement.</p>
+                  <%= image_tag "icons/insurance-icon.svg", style: "width: 23%; float: right;" %>
                 </div>
               </div>
             <%end%>
