--- a/app/views/home/loan_against_property.html.erb
+++ b/app/views/home/loan_against_property.html.erb
@@ -9,7 +9,7 @@
 </section>
 <div class="container custom-application">
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-6">
       <p>Please provide following details for the application</p>
       <%= form_for @loan_against_property, :url => { :action => "loan_against_property" }, remote: false, html: { class: "custom_personal_loan" } do |f| %>
           <div class="row">
@@ -40,6 +40,12 @@
           <br>
           <p class="text-center"><span style="color: blue;">Click on this link to apply directly.</span> <%= link_to "Apply", loan_against_property_path('step1'), method: :get, style: "color: #0000ff; font-weight: 500;" %></p><br>
       <%end%>
+    </div>
+    <div class="col-md-6">
+      <h4 class="crd-heading">
+        <br><br>
+        <span>When you fill & send this form,  it will help us to assess the case and improve the chances of your getting Loan against Property.</span><br><br>Feel free to talk to us on <a href="tel:+918806644344">+91-88066-44344</a>.
+      </h4>
     </div>
   </div>
   <div class="row">
