--- a/app/views/home/personal_loan.html.erb
+++ b/app/views/home/personal_loan.html.erb
@@ -2,14 +2,14 @@
   <div class="container  custom-container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center card-title">Apply for Personal Loan with Lowest Interest Rate From Over 25 Banks</h2>
+        <h2 class="text-center card-title">Apply for Personal Loan with Lowest Interest Rate From Over 25+ Banks</h2>
       </div>
     </div>
   </div>
 </section>
 <div class="container custom-application">
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-6">
       <p>Please provide following details for the application</p>
       <%= form_for @personal_loan, :url => { :action => "personal_loan" }, remote: false, html: { class: "custom_personal_loan" } do |f| %>
           <div class="row">
@@ -41,6 +41,11 @@
           <p class="text-center"><span style="color: blue;">Click on this link to apply directly.</span> <%= link_to "Apply", personal_loan_path('step1'), method: :get, style: "color: #0000ff; font-weight: 500;" %></p><br>
       <%end%>
     </div>
+    <div class="col-md-6">
+      <h4 class="crd-heading">
+        <span>A Personal Loan is an unsecured loan, meaning the borrower is not required to pledge a collateral security to be granted the funds by an institution he or she is applying to.</span> Availing personal loan is easy. Our Financial Assistant will come and explain everything and collect all the documents and initiate the process.  You can also apply online, on approval funds will be transferred into your bank account.  You may use the money to meet almost any expense. Call us on <a href="tel:+918806644344">+91-88066-44344</a>.
+      </h4>
+    </div>
   </div>
   <div class="row">
     <div class="col-md-12">
@@ -57,8 +62,6 @@
   <div class="row">
     <div class="col-md-12">
       <br>
-      <p class="pl-ser"><strong>About Personal Loan</strong></p>
-      <p>A Personal Loan is an unsecured loan, meaning the borrower is not required to pledge a collateral security to be granted the funds by an institution he or she is applying to. Availing personal loan is easy. Our Financial Assistant will come and explain everything and collect all the documents and initiate the process.  You can also apply online, on approval funds will be transferred into your bank account.  You may use the money to meet almost any expense.</p>
       <p class="pl-ser"><strong>How can you use Personal Loan?</strong></p>
       <p>Personal loan helps you to meet a wide range of financial requirements that may include medical crises, home improvement or renovation, education, debt consolidation, travel, or wedding</p>
       <p class="pl-ser"><strong>What is the Rate of Interest for Personal Loan?</strong></p>
