--- a/app/views/home_loan/step1.html.erb
+++ b/app/views/home_loan/step1.html.erb
@@ -67,7 +67,7 @@
               <label>Mobile Number
                 <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="100% privacy guaranteed. We well never share your details."></i>
               </label>
-              <%= f.number_field(:mobile_number, class: "form-control") %>
+              <%= f.number_field(:mobile_number, class: "form-control", value: "#{session[:hl_mobile_number] ? session[:hl_mobile_number] : f.object.mobile_number}") %>
             </div>
           </div>        
           <div class="col-md-6">
