--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,17 +18,34 @@
   <body>
     <header data-spy="affix" data-offset-top="1" class="clearfix">
       <%= render "layouts/flash_messages" %>
-      <div class="bottom-header" >
+      <div class="bottom-header">
+        <div class="container header-strip">
+          <div class="row">
+            <div class="col-md-12">
+              <p>
+                <span>
+                  <i class="fa fa-envelope"></i>&nbsp;
+                  <a href="mailto:support@growwcapital.com">support@growwcapital.com</a>
+                </span>
+                 <span class="bar"> | </span> 
+                <span>
+                  <i class="fa fa-whatsapp"></i>&nbsp;
+                  <a href="tel:+918806644344">+91-88066-44344</a>  
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
         <div class="container">
           <nav class="navbar navbar-expand-md navbar-default" role="navigation">
             <div class="container-fluid">
               <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse-mobile" aria-controls="navbar-collapse-mobile" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
                 </button>
                 <%= link_to root_path, method: :get, class: "navbar-brand" do %>
                 <span class="logo">
-                <span class="primary_text"><%= image_tag "logo2.png", alt: "logo2", class: "main-logo" %></span>
+                  <span class="primary_text"><%= image_tag "logo2.png", alt: "logo2", class: "main-logo" %></span>
                 </span>                  
                 <% end %>
               </div>
@@ -142,111 +159,6 @@
               </div>
             </div>
           </nav>
-          <%if request.path == "/"%>          
-            <!-- <nav role="navigation" aria-labelledby="block-quicklinksmenu-menu" id="block-quicklinksmenu" class="quicklinks-menu">
-              <div class="inner-wrapper">
-                <h2 class="sr-only" id="block-quicklinksmenu-menu">Quicklinks menu</h2>
-                <ul class="menu nav">
-                  <li class="desktop-menu hidden-sm hidden-xs">
-                    <a href="/" class="dropdown-toggle" data-toggle="dropdown">Desktop <span class="caret"></span></a>
-                    <ul class="menu dropdown-menu">
-                      <li class="call-us">
-                        <a title="" target="" id="let-u-call-u" data-toggle="modal" data-target="#call-you" href="/">
-                          <i class="fa fa-3x fa-phone"></i><br>
-                          Let Us Call You
-                        </a>
-                      </li>
-                      <li class="request-callback">
-                        <a title="" target="" href="/"><i class="fa fa-3x fa-mobile"></i><br>
-                        Request Call Back</a>
-                      </li>
-                      <li class="missed-call">
-                        <a title="" target="" id="let-u-call-u" data-toggle="modal" data-target="#missed-call" href="/"><i class="fa fa-3x fa-volume-control-phone"></i><br>Give a Missed Call</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="mobile-menu hidden-md hidden-lg">
-                    <span class="toggle-arrow"></span>
-                    <a href="/" class="dropdown-toggle" data-toggle="dropdown">Mobile <span class="caret"></span></a>
-                    <ul class="menu dropdown-menu">
-                      <div class="hidden-quicklinks" style="display: none;">
-                        <li class="calculate-emi hidden-mobile">
-                          <a title="" target="" href="/home-loan-emi-calculator">Calculate EMI</a>
-                        </li>
-                        <li class="call-us call-us-click-call hidden-mobile">
-                          <a title="" target="" href="javascript:void(0)">Call Us Now</a>
-                        </li>
-                        <li class="branch-locator hidden-mobile">
-                          <a title="" target="" href="/branch-locator">Branch Locator </a>
-                        </li>
-                      </div>
-                      <li class="chat-us">
-                        <a title="" target="" href="javascript:void(0);">Chat with us</a>
-                      </li>
-                      <li class="request-callback">
-                        <a title="" target="" href="/">Request Call Back</a>
-                      </li>
-                      <li class="more-options">
-                        <a title="" target="" href="">More Options</a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-            <div id="call-you" class="modal fade" role="dialog">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  </div>
-                  <%= form_for @instant_call, :url => { controller: "home", action: "instant_call" }, remote: true, html: { id:  "instant-call", class: "instant-call" } do |f| %>                
-                    <div class="modal-body">
-                      <p class="heading">Couldn't find what you were looking for?</p>
-                      <p class="body">Please fill in your details to get a call from our<br>Loan Expert!</p>
-                      <div class="form-group">
-                        <label class="ins-lbl">Name</label>
-                        <input placeholder="Enter your full name" class="form-control" type="text" name="instant_call[full_name]" id="instant_call_full_name">
-                      </div>
-                      <div class="form-group">
-                        <label class="ins-lbl">Mobile Number</label>
-                        <input placeholder="Enter your mobile number" class="form-control" type="number" name="instant_call[mobile_number]" id="instant_call_mobile_number">
-                      </div>
-                      <div class="form-group">
-                        <label class="ins-lbl">Email</label>
-                        <input placeholder="Enter your full email" class="form-control" type="email" name="instant_call[email]" id="instant_call_email">
-                      </div>
-                      <div class="form-group">
-                        <label class="ins-lbl">Location</label>
-                        <%= select_tag "instant_call[city]", options_for_select(only_cities, "") %>
-                      </div>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="submit" class="btn btn-block btn-default">SUBMIT</button>
-                    </div>
-                  <%end%>
-                </div>
-              </div>
-            </div>
-            <div id="missed-call" class="modal fade" role="dialog">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  </div>
-                  <div class="modal-body">
-                    <div>
-                      <h4 class="text-center">LOOKING FOR ANY NEW LOAN?</h4>
-                      <p class="text-center">Just give us a Missed Call on</p>
-                    </div>
-                    <div class="text-center">
-                      <span><i class="fa fa-2x fa-phone"></i><span class="mob-no">+91-9289200017</span></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-          <%end%>
         </div>
         <div class="header_shadow"></div>
       </div>
@@ -267,15 +179,12 @@
         });
       });
     </script>
-    <%if request.path == "/" %>
     <footer class="design_2">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 padding-left-none md-padding-left-none sm-padding-left-15 xs-padding-left-15">
-            <h4>newsletter</h4>
-            <p>By subscribing to our company newsletter
-              you will always be up-to-date on our latest
-              promotions, deals and vehicle inventory!
+            <h4>At your service:</h4>
+            <p>When you give <a href="/">GrowwCapital</a> any task, no matter how big or small, it is an opportunity for us to prove that we know our business & that you can trust us!
             </p>
             <%= form_for 'newsletter', path: home_newsletter_path, html: {id:  "newsletter", class: "newsletter"} do |f| %>
             <%= f.email_field(:email, class: "form-control", placeholder: "Email Address", required: true) %>
@@ -323,7 +232,6 @@
         </div>
       </div>
     </section>
-    <%end%>
     <div class="back_to_top"> <%= image_tag "arrow-up.png", alt: "scroll up" %></div>
   </body>
 </html>
