--- a/app/views/personal_loan/_form.html.erb
+++ b/app/views/personal_loan/_form.html.erb
@@ -30,7 +30,7 @@
       <label>Mobile number
         <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="100% privacy guaranteed. We well never share your details."></i>
       </label>
-      <%= f.number_field(:mobile_number, class: "form-control", placeholder: "9999999999") %>
+      <%= f.number_field(:mobile_number, class: "form-control", placeholder: "9999999999", value: "#{session[:pl_mobile_number] ? session[:pl_full_name] : f.object.mobile_number}") %>
     </div>
   </div>
   <div class="col-md-4">
