--- a/app/views/professional_loan/step1.html.erb
+++ b/app/views/professional_loan/step1.html.erb
@@ -53,7 +53,7 @@
           <div class="col-md-6">
             <div class="form-group">
               <label>Mobile Number</label>
-              <%= f.number_field(:mobile_number, class: "form-control") %>
+              <%= f.number_field(:mobile_number, class: "form-control", value: "#{session[:prl_mobile_number] ? session[:prl_mobile_number] : f.object.mobile_number}") %>
             </div>
           </div>
         </div>
