--- a/app/views/transfer_personal_loan/_form2.html.erb
+++ b/app/views/transfer_personal_loan/_form2.html.erb
@@ -15,12 +15,20 @@
       <%= f.number_field(:current_emi, class: "form-control", placeholder: "Rs. 0") %>
     </div>
   </div>
-  <div class="col-md-3">
+  <!-- <div class="col-md-3">
     <div class="form-group">
       <label>Any existing credit card?
         <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Your existing card will help to approve this application."></i>
       </label>
-      <%= f.select(:existing_card, existing_card, class: "form-control") %>     
+      <%#= f.select(:existing_card, existing_card, class: "form-control") %>     
+    </div>
+  </div> -->
+  <div class="col-md-3">
+    <div class="form-group">
+      <label>Your Full Name
+        <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="As per aadhar card records, to ensure your application gets successfully processed."></i>
+      </label>
+      <%= f.text_field(:full_name, class: "form-control", placeholder: "", value: "#{session[:tpl_full_name] ? session[:tpl_full_name] : f.object.full_name}") %>
     </div>
   </div>
   <div class="col-md-3">
@@ -35,14 +43,6 @@
 <div class="row">
   <div class="col-md-3">
     <div class="form-group">
-      <label>Your Full Name
-        <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="As per aadhar card records, to ensure your application gets successfully processed."></i>
-      </label>
-      <%= f.text_field(:full_name, class: "form-control", placeholder: "") %>
-    </div>
-  </div>
-  <div class="col-md-3">
-    <div class="form-group">
       <label>Date Of Birth
         <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="To ensure you are fiting the partner's criteria."></i>
       </label>
@@ -54,7 +54,7 @@
       <label>Your Email Address
         <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Share the correct email address to ensure timely communication regarding this application."></i>
       </label>
-      <%= f.text_field(:email, class: "form-control", placeholder: "") %>
+      <%= f.text_field(:email, class: "form-control", placeholder: "", value: "#{session[:tpl_email] ? session[:tpl_email] : f.object.email}") %>
     </div>
   </div>
   <div class="col-md-3">
