(Fixed) about us page content added.

--- a/app/assets/stylesheets/credit_card.scss
+++ b/app/assets/stylesheets/credit_card.scss
@@ -34,7 +34,7 @@
 .crd-heading {
   padding: 90px 50px 50px 50px;
   text-align: justify;
-  color: #b8b7b7;
+  color: #706d6d;
   font-size: 26px;
   span {
     color:  #1b1dc7;
