--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -1,12 +1,39 @@
 <section id="abt-us-banner">
 </section>
-<section class="personal-loan-section custom-container">
+<br><br>
+<section class="personal-loan-section">
   <div class="container">
     <div class="row align-items-end">
-      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="margin: 0 auto;">
-        <p>When you have a great story about how your product or service was built to change lives, share it. The "About Us" page is a great place for it to live, too. Good stories humanize your brand, providing context and meaning for your product. What’s more, good stories are sticky -- which means people are more likely to connect with them and pass them on.</p>
-        <p>Yellow Leaf Hammocks tells users about its product by describing how the hammocks empower artisan weavers and their families. The company breaks down different pieces of the story into sections that combine words and easily digestible graphics, painting a picture instead of big chunks of text. They're clear about why they're different: "Not a Charity," the page reads. And then: "This is the basis for a brighter future, built on a hand up, not a handout."</p>
-        <p>Every company has a story to tell, so break out your storytelling skills from that random English class you took years ago and put them to work on your "About Us" page. Using descriptive and emotive copy and gorgeous graphics, an "About Us" page with a story works harder for your business than a generic one.</p>
+      <div class="col-md-12 about-us">
+        <p class="pl-about">Who we are</p>
+        <p><a href="/">GrowwCapital</a> is a Nagpur based Financial Consultancy firm working hard to build a 
+          strong foundation &  network by offering unbiased advisory services to those seeking any type of Loans, Insurance Policies & Credit Cards. We offer client-centric, data-driven, and practical solutions.
+          Having been into this field for over 8 years, we’ve witnessed market growing, faltering, and getting back on its feet on several occasions. The experience has deepened our insight and we thus combine our experience of working with the best banks and financial institutions with passion for financial services to help clients meet their business and personal goals.</p>
+        <p>Having been into this field for over 8 years, we’ve witnessed market growing, faltering, and getting back on its feet on several occasions. The experience has deepened our insight and we thus combine our experience of working with the best banks and financial institutions with passion for financial services to help clients meet their business and personal goals.</p>
+        <p class="pl-about">Our clients</p>
+        <p>Our clients profile is large and wide. From the First Time home loan and credit card seekers to those seeking to improve their credit score, transfer home loan from one bank to another; start-ups looking for the best health policy for entire family for optimum safety - we serve each of these with same commitment.</p>
+        <p>We not only offer all types of lending solutions, but also undertake to repair credit score for client, handle the entire borrowing process for clients right from helping you choose the right type of loan based on your need to presenting best offers launched by banks, and ensuring the loan amount is disbursed in your account as quickly as possible. With us by your side, you will have least to worry. And that’s a promise.</p>
+        <p class="pl-about">Our Strategy: Client Centric Approach</p>
+        <p>What sets <a href="/">GrowwCapital</a> apart is our USP of transparent approach. Every piece of advice we offer to clients is fair and unbiased, legally ethical supported by professional level of customer service. We follow client based working model i.e. every interaction starts with understanding client’s requirement. Based on their requirements and financial capacity we advise the most suitable product in the market at the best rates.</p>
+        <p class="pl-about">Team</p>
+        <p>In order to offer the best experience to clients doing business with us, we have set up a team comprising loan consultants, credit cards experts, and insurance policies.  Besides Front Office, and Sales Team we also have a CRM team that ensures clients are happy with our end-to-end services that includes going with the best product, proper documentation, and timely disbursement of loan and delivery of credit card and insurance policy.</p>
+        <p>As of now <a href="/">GrowwCapital</a> does not have branches or offices in cities other than Nagpur.  As and when we set up new offices, we will inform our clients and associates via email.</p>
+        <p class="pl-about">Mission</p>
+        <p>To make a wide range of financial products easily and responsibly accessible to clients, and deliver all products and services efficiently, leveraging technology.</p>
+        <p>Vision</p>
+        <p>The canvas of financial services and products is changing at a fast pace. Our vision is to help as many people as we can by offering best offers in products and services we deal in, in transparent & secure environment. We want to earn trust and loyalty of our clients with good services. We want to be a name to reckon with in all markets we operate and expand our area of operations.</p>
+        <p>We look forward to serving your smallest need!</p>
+        <p class="abt-strip">
+          <span>
+            <i class="fa fa-envelope"></i>&nbsp;
+            <a href="mailto:support@growwcapital.com">support@growwcapital.com</a>
+          </span>
+           <span class="bar"> | </span> 
+          <span>
+            <i class="fa fa-whatsapp"></i>&nbsp;
+            <a href="tel:+918806644344">+91-88066-44344</a>  
+          </span>
+        </p>
       </div>
     </div>
   </div>
