--- a/app/views/home/transfer_home_loan.html.erb
+++ b/app/views/home/transfer_home_loan.html.erb
@@ -44,7 +44,7 @@
     <div class="col-md-6">
       <h4 class="crd-heading">
         <br>
-        <span>If you seek to transfer your home loan for any reason, just fill the form the send it to us.</span><br><br>We will revert within or less than 24 hours and offer the best solutions. If you want to talk to us, you can call us on <a href="tel:+918806644344">+91-88066-44344</a>.        
+        <span>If you seek to transfer your home loan for any reason, just fill the form the send it to us.</span><br><br>We will revert within or less than 24 hours and offer the best solutions. If you want to talk to us,<br><br>you can call us on <a href="tel:+918806644344">+91-88066-44344</a>.        
       </h4>
     </div>
   </div>
