--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -77,7 +77,7 @@
   height: 400px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 50px;
+  margin-top: 115px;
   width: 100%;
   border-bottom: 1px solid #ececec;
 }
@@ -86,8 +86,8 @@
   background-image: url(./about-us.png);
   height: 400px;
   background-size: contain;
-  background-repeat: no-repeat;
-  margin-top: 50px;
+  background-repeat: round;
+  margin-top: 115px;
   width: 100%;
 }
 
@@ -96,7 +96,7 @@
   height: 430px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 50px;
+  margin-top: 115px;
   width: 100%;
 }
 
@@ -105,7 +105,7 @@
   height: 400px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 50px;
+  margin-top: 115px;
   width: 100%;
 }
 
@@ -114,7 +114,7 @@
   height: 400px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 50px;
+  margin-top: 115px;
   width: 100%;
 }
 
@@ -559,7 +559,7 @@ textarea.error, input.error, select.error {
 
 .custom-container {
   padding: 50px 0px 50px 0px;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 .emi-calcul {
@@ -572,7 +572,7 @@ textarea.error, input.error, select.error {
   position: relative;
   font-weight: 400;
   font-size: 21px;
-  background: -webkit-linear-gradient(#01b4ec, #101635);
+  background: #1b1dc7;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -843,7 +843,7 @@ textarea.error, input.error, select.error {
 
 .pb-product .product-name {
   font-size: 14px;
-  color: #052f5f;
+  color: #1b1dc7;
   font-weight: 700;
   margin-bottom: 8px;
   text-transform: uppercase;
@@ -1241,6 +1241,49 @@ homeStrip .container>p {
 
 .modal {
   background-image: linear-gradient( #161414d1, #161414d1, #161414d1, #161414d1, #161414d1, #161414d1);
+}
+
+.about-us {
+  p {
+    font-size: 20px;
+    text-align: justify;
+  }
+  .pl-about {
+    font-weight: bold;
+    color: #1b1dc7;  
+  }
+  .abt-strip {
+    span {
+      font-size: 18px;  
+    }
+    .bar {
+      font-size: 25px;
+    }
+    .fa-envelope {
+      color: #cb2d08;
+    }
+
+    .fa-whatsapp {
+      color: #26c726;
+    }
+  }
+}
+
+.homeStrip {
+  p {
+    margin: 10px 30px 10px 30px;
+    font-size: 16px;
+  }
+  p:nth-child(2), p:nth-child(3), p:nth-child(4) {
+    color: #1b1dc7;
+  }
+  .fa-envelope {
+    color: #cb2d08;
+  }
+
+  .fa-whatsapp {
+    color: #26c726;
+  }
 }
 
 #missed-call {
