--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,7 +69,7 @@
         items: 6,
         nav:true,
         autoplay:true,
-        autoplayTimeout:5000,
+        autoplayTimeout:500000,
         autoplayHoverPause:true,
         navigation : true, // Show next and prev buttons
         slideSpeed : 5000,
@@ -85,13 +85,31 @@
 </script>
 <section class="banner-wrap">
   <div id="carosel-home-desk" class="owl-carousel">
-    <div class="carosel-imgs img1"><%= image_tag "carosel/desktop/credit-card-banner.png", alt: "" %></div>
-    <div class="carosel-imgs img2"><%= image_tag "carosel/desktop/home-loan-banner.png", alt: "" %></div>
+    <div class="carosel-imgs img1">
+      <div class="txt-carosel-imgs">
+        <h3>Facilitating all types of Loans from the best banks</h3><br>
+        <h3>Associated with best insurance companies</h3><br>
+        <h3>Best offers to suit salaried individuals & businessmen</h3><br>
+      </div>
+    </div>
+    <div class="carosel-imgs img2">
+      <div class="txt-carosel-imgs">
+        <h3><b>Personalized consultation & other services</b></h3>
+        <h3>Our Relationship Manager will visit your office or home</h3>
+        <ul>
+          <li>To make a presentation</li>
+          <li>Collect documents</li>
+          <li>Get signatures</li>
+          <li>Handover policy</li>
+          <li>Settle claims</li>
+        </ul>
+      </div>
+    </div>
     <!-- <div class="carosel-imgs img3"><%#= image_tag "carosel/desktop/personal-loan-banner.png", alt: "" %></div> -->
   </div>
   <div id="carosel-home-mob" class="owl-carousel">
-    <div class="carosel-imgs img1"><%= image_tag "carosel/mobile/credit-card-banner.png", alt: "" %></div>
-    <div class="carosel-imgs img2"><%= image_tag "carosel/mobile/home-loan-banner.svg", alt: "" %></div>
+    <div class="carosel-imgs img1"></div>
+    <div class="carosel-imgs img2"></div>
     <!-- <div class="carosel-imgs img3"><%#= image_tag "carosel/mobile/personal-loan-banner.png", alt: "" %></div> -->
   </div>
 </section>
@@ -249,23 +267,24 @@
         </div>
       </section>
       <div class="homeStrip">
-        <div class="container">
-          <div class="do-dont">
-            <br>
-            <br>
-            <br>
-            <!-- <div>
-              <ul>
-                <li><i class="fa fa-times-circle"></i><p>Don’t click on any link</p></li>
-                <li><i class="fa fa-times-circle"></i><p>Don’t share any information, especially sensitive data like account number, OTP etc.</p></li>
-              </ul>
-            </div>
-            <div>
-              <ul>
-                <li><i class="fa fa-check-circle"></i><p>Delete the communication immediately</p></li>
-                <li><i class="fa fa-check-circle"></i><p>Inform us at <a href="mailto:support@growwcapital.com">support@growwcapital.com</a> or 8806 644 344</p></li>
-              </ul>
-            </div> -->
+        <div class="row">
+          <div class="col-md-12">
+            <p>We handle the entire borrowing process for clients, from assisting to choose the right loan from the most apt institution, till the loan is disbursed in your bank.</p>
+            <p>Is your loan application rejected because of low credit scores?</p>
+            <p>Your credit report shows somebody else’s loan accounts?</p>
+            <p>Does Your Credit Reputation Look Skewed Because Of Some Error?</p>
+            <p><b>If you’re facing any of the above problems or some other, let our experts guide and assist you to resolve the issues!</b></p>
+            <p class="abt-strip">
+              <span>
+                <i class="fa fa-envelope"></i>&nbsp;
+                <a href="mailto:support@growwcapital.com">support@growwcapital.com</a>
+              </span>
+               <span class="bar"> | </span> 
+              <span>
+                <i class="fa fa-whatsapp"></i>&nbsp;
+                <a href="tel:+918806644344">+91-88066-44344</a>  
+              </span>
+            </p>
           </div>
         </div>
       </div>
@@ -285,28 +304,28 @@
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/credible.svg" data-src="PBHP/assets/images/credible.svg" alt="credible">
-                      <h3>Wide Choice</h3>
+                      <h3>Unbiased advisor of Loan and Insurance</h3>
                       <p><br><br></p>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/trustworthy.svg" data-src="PBHP/assets/images/trustworthy.svg" alt="trustworthy">
-                      <h3>Highly Trusted</h3>
+                      <h3>Best deals in Loan, Credit cards & Insurance</h3>
                       <p><br><br></p>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/secure.svg" data-src="PBHP/assets/images/secure.svg" alt="secure">
-                      <h3>Safe &amp; Secure</h3>
+                      <h3>Unmatched advisory services</h3>
                       <p><br><br></p>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/helpful.svg" data-src="PBHP/assets/images/helpful.svg" alt="helpful">
-                      <h3>Customer First</h3>
+                      <h3>All Types of Lending Solutions</h3>
                       <p><br><br></p>
                   </div>
                 </div>
