--- a/app/views/transfer_home_loan/step2.html.erb
+++ b/app/views/transfer_home_loan/step2.html.erb
@@ -9,16 +9,22 @@
         </div>
       </div>
       <div class="row first-row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="form-group">
             <label>Property Cost</label>
             <%= f.number_field(:property_cost, class: "form-control") %>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="form-group">
             <label>Employment Type</label>
             <%= f.select(:employment_type, employment_type, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Full Name</label>
+            <%= f.text_field(:full_name, class: "form-control",  value: "#{session[:thl_full_name] ? session[:thl_full_name] : f.object.full_name}") %>
           </div>
         </div>
       </div>
@@ -36,7 +42,7 @@
             <label>Email
               <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Share the correct email address to ensure timely communication regarding this application."></i>
             </label>
-            <%= f.email_field(:email, class: "form-control") %>
+            <%= f.email_field(:email, class: "form-control", value: "#{session[:thl_email] ? session[:thl_email] : f.object.email}") %>
           </div>
         </div>
         <div class="col-md-4">
