(Fixed) date validation

--- a/app/views/home/instant_call.js.erb
+++ b/app/views/home/instant_call.js.erb
@@ -1,2 +1,5 @@
 toastr["info"]('<%= flash[:notice] %>', "");
-$('#call-you').modal('hide');
+$('#apply-now-modal').modal('hide');
+$("#instant_call_full_name").val("");
+$("#instant_call_mobile_number").val("");
+$("#instant_call_product_name").val("");
