--- a/app/views/loan_mailer/instant_call.html.erb
+++ b/app/views/loan_mailer/instant_call.html.erb
@@ -1,8 +1,7 @@
 <p>Dear Admin,</p>
 <p>Someone is tried to reach us! Here is the details for instant call.</p>
 <p>Full Name: <%= @instant_call.full_name %></p>
-<p>Email: <%= @instant_call.email %></p>
 <p>Mobile Number: <%= @instant_call.mobile_number %></p>
-<p>Location(City): <%= @instant_call.city %></p>
+<p>Product Name: <%= @instant_call.product_name.humanize %></p>
 <p>Thanks & Regards</p>
 <p>Team Growwcapital</p>
