--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -77,7 +77,7 @@
   height: 400px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 115px;
+  margin-top: 110px;
   width: 100%;
   border-bottom: 1px solid #ececec;
 }
@@ -87,7 +87,7 @@
   height: 400px;
   background-size: contain;
   background-repeat: round;
-  margin-top: 115px;
+  margin-top: 110px;
   width: 100%;
 }
 
@@ -96,7 +96,7 @@
   height: 430px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 115px;
+  margin-top: 110px;
   width: 100%;
 }
 
@@ -105,16 +105,16 @@
   height: 400px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 115px;
+  margin-top: 110px;
   width: 100%;
 }
 
 #cont-us-banner {
   background-image: url(./contact-us.png);
   height: 400px;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
-  margin-top: 115px;
+  margin-top: 110px;
   width: 100%;
 }
 
@@ -618,7 +618,6 @@ textarea.error, input.error, select.error {
 }
 
 .contact-us {
-  border: 2px solid #0854a0;
   width: 100%;
   height: 500px;  
 }
@@ -1315,6 +1314,12 @@ homeStrip .container>p {
       font-size: 22px;
       font-weight: bold;
     }
+  }
+}
+
+.contact-us {
+  .content-info {
+    padding-left: 60px;
   }
 }
 
