--- a/app/views/credit_card/step2.html.erb
+++ b/app/views/credit_card/step2.html.erb
@@ -34,7 +34,7 @@
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.date_field(:dob, class: "form-control", max: "#{Time.zone.now - 21.years}") %>
+            <%= f.date_field(:dob, class: "form-control", max: "#{Time.zone.now - 21.years}", min: "#{(Time.zone.now - 21.years) - 60.years}") %>
           </div>
         </div>
       </div>
