--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -1,120 +1,106 @@
 <section id="cont-us-banner">
 </section>
-<section class="content">
-  <div class="container">
-    <div class="inner-page">
-      <div class="find_map row clearfix">
-        <div class="col-lg-12">
-          <h2 class="margin-bottom-25 margin-top-none">FIND US ON THE MAP</h2>
-          <div class="map margin-vertical-30">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1860.721386436601!2d79.0776456581921!3d21.134770546485324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c090506a12bb%3A0xd5702dfdeab25841!2sLokmat%20Square%2C%20Ramdaspeth%2C%20Nagpur%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1603249562691!5m2!1sen!2sin" width="600" height="450" frameborder="0" class="contact-us" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-          </div>
+<br><br>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2 information_head">
+      <h3 class="margin-bottom-25 margin-top-none">BUSINESS HOURS</h3>
+      <table class="table table-bordered no-border font-12px">
+        <thead>
+          <tr>
+            <td colspan="2"><strong style="font-size: 15px;">Sales Department</strong></td>
+          </tr>
+        </thead>
+        <tbody style="text-align: left;">
+          <tr>
+            <td>Mon:</td>
+            <td>10:00AM - 7:00PM</td>
+          </tr>
+          <tr>
+            <td>Tue:</td>
+            <td>10:00AM - 7:00PM</td>
+          </tr>
+          <tr>
+            <td>Wed:</td>
+            <td>10:00AM - 7:00PM</td>
+          </tr>
+          <tr>
+            <td>Thu:</td>
+            <td>10:00AM - 7:00PM</td>
+          </tr>
+          <tr>
+            <td>Fri:</td>
+            <td>10:00AM - 7:00PM</td>
+          </tr>
+          <tr>
+            <td>Sat:</td>
+            <td>10:00AM - 7:00PM</td>
+          </tr>
+          <tr>
+            <td>Sun:</td>
+            <td>Closed</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4 information_head">
+      <h3 class="margin-bottom-25 margin-top-none">CONTACT INFORMATION</h3>
+      <div class="address clearfix margin-right-25">
+        <div class="icon_address">
+          <p><i class="fa fa-map-marker"></i><strong>Address:</strong></p>
+        </div>
+        <div class="contact_address">
+          <p class="margin-bottom-none">
+            2nd Floor,<br>
+            Gupta Travels Building, <br>
+            Lokmat Square, Nagpur - 440012
+          </p>
         </div>
       </div>
-      <div class="row contacts margin-top-25">
-        <div class="col-md-5 left-information">
-          <div class="contact_information information_head clearfix">
-            <h3 class="margin-bottom-25 margin-top-none">CONTACT INFORMATION</h3>
-            <div class="address clearfix margin-right-25">
-              <div class="icon_address">
-                <p><i class="fa fa-map-marker"></i><strong>Address:</strong></p>
-              </div>
-              <div class="contact_address">
-                <p class="margin-bottom-none">
-                  2nd Floor,<br>
-                  Gupta Travels Building, <br>
-                  Lokmat Square, Nagpur - 440012
-                </p>
-              </div>
-            </div>
-            <div class="address clearfix address_details margin-right-25 padding-bottom-40">
-              <ul class="margin-bottom-none">
-                <li><i class="fa fa-phone"></i><strong>Phone:</strong> <a href="tel:+918806644344">+91-88066-44344</a></li>
-                <li><i class="fa fa-envelope-o"></i><strong>Email:</strong> <a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
-                <li class="padding-bottom-none"><i class="fa fa-laptop"></i><strong>Web:&nbsp;&nbsp;&nbsp;</strong> <a href="http://www.growwcapital.com/">www.growwcapital.com/</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="information_hour information_head margin-top-30 xs-padding-bottom-40">
-            <h3 class="margin-bottom-25 margin-top-none">BUSINESS HOURS</h3>
-            <div class="row">
-              <div class="col-sm-5">
-                <div class="deparment">
-                  <table class="table table-bordered no-border font-12px">
-                    <thead>
-                      <tr>
-                        <td colspan="2"><strong style="font-size: 15px;">Sales Department</strong></td>
-                      </tr>
-                    </thead>
-                    <tbody style="text-align: left;">
-                      <tr>
-                        <td>Mon:</td>
-                        <td>10:00AM - 7:00PM</td>
-                      </tr>
-                      <tr>
-                        <td>Tue:</td>
-                        <td>10:00AM - 7:00PM</td>
-                      </tr>
-                      <tr>
-                        <td>Wed:</td>
-                        <td>10:00AM - 7:00PM</td>
-                      </tr>
-                      <tr>
-                        <td>Thu:</td>
-                        <td>10:00AM - 7:00PM</td>
-                      </tr>
-                      <tr>
-                        <td>Fri:</td>
-                        <td>10:00AM - 7:00PM</td>
-                      </tr>
-                      <tr>
-                        <td>Sat:</td>
-                        <td>10:00AM - 7:00PM</td>
-                      </tr>
-                      <tr>
-                        <td>Sun:</td>
-                        <td>Closed</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 offset-lg-1 offset-md-1 xs-margin-top-30">
-          <div class="contact_wrapper information_head">
-            <h3 class="margin-bottom-25 margin-top-none">CONTACT FORM</h3>
-            <div class="margin-bottom-20">
-              <%= form_for @contact_us, url: { action: "save_contact_us" }, method: :post, html: { id:  "contact_us", class: "contact_us" } do |f| %>
-                <div class="row">
-                  <div class="col-md-6">
-                    <%= f.text_field(:first_name, class: "form-control", placeholder: "First Name(* Required)") %>
-                  </div>
-                  <div class="col-md-6">
-                    <%= f.text_field(:last_name, class: "form-control", placeholder: "Last Name(* Required)") %>
-                  </div>
-                </div><br>
-                <div class="row">
-                  <div class="col-md-6">
-                    <%= f.text_field(:email, class: "form-control", placeholder: "Email(* Required)") %>
-                  </div>
-                  <div class="col-md-6">
-                    <%= f.text_field(:subject, class: "form-control", placeholder: "Subject(* Required)") %>
-                  </div>
-                </div><br>
-                <div class="row">
-                  <div class="col-md-12">
-                    <%= f.text_area(:message, class: "form-control", placeholder: "Message(* Required)") %>
-                  </div>
-                </div>
-                <button type="submit" class="btn btn-default">Send Message</button>
-              <%end%>
-            </div>
-          </div>
-        </div>
+      <div class="address clearfix address_details margin-right-25 padding-bottom-40">
+        <ul class="margin-bottom-none">
+          <li><i class="fa fa-phone"></i><strong>Phone:</strong> <a href="tel:+918806644344">+91-88066-44344</a></li>
+          <li><i class="fa fa-envelope-o"></i><strong>Email:</strong> <a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
+          <li class="padding-bottom-none"><i class="fa fa-laptop"></i><strong>Web:&nbsp;&nbsp;&nbsp;</strong> <a href="http://www.growwcapital.com/">www.growwcapital.com/</a></li>
+        </ul>
       </div>
-      <div class="clearfix"></div>
+    </div>
+    <div class="col-md-6 information_head">
+      <h3 class="margin-bottom-25 margin-top-none">CONTACT FORM</h3>
+      <div class="margin-bottom-20">
+        <%= form_for @contact_us, url: { action: "save_contact_us" }, method: :post, html: { id:  "contact_us", class: "contact_us" } do |f| %>
+          <div class="row">
+            <div class="col-md-6">
+              <%= f.text_field(:first_name, class: "form-control", placeholder: "First Name(* Required)") %>
+            </div>
+            <div class="col-md-6">
+              <%= f.text_field(:last_name, class: "form-control", placeholder: "Last Name(* Required)") %>
+            </div>
+          </div><br>
+          <div class="row">
+            <div class="col-md-6">
+              <%= f.text_field(:email, class: "form-control", placeholder: "Email(* Required)") %>
+            </div>
+            <div class="col-md-6">
+              <%= f.text_field(:subject, class: "form-control", placeholder: "Subject(* Required)") %>
+            </div>
+          </div><br>
+          <div class="row">
+            <div class="col-md-12">
+              <%= f.text_area(:message, class: "form-control", placeholder: "Message(* Required)") %>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-custom">Send Message</button>
+        <%end%>
+      </div>
     </div>
   </div>
-</section>
+  <div class="row">
+    <div class="col-md-12 find_map">
+      <h2 class="margin-bottom-25 margin-top-none">FIND US ON THE MAP</h2>
+      <div class="map margin-vertical-30">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1860.721386436601!2d79.0776456581921!3d21.134770546485324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c090506a12bb%3A0xd5702dfdeab25841!2sLokmat%20Square%2C%20Ramdaspeth%2C%20Nagpur%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1603249562691!5m2!1sen!2sin" width="600" height="450" frameborder="0" class="contact-us" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+    </div>
+  </div>
+</div>
