--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,6 +92,9 @@
                   <!-- <li class="<%#= active_tab('blog') %>">
                     <%#= link_to "Blog", blog_path, method: :get %>
                   </li> -->
+                  <li class="<%#= active_tab('blog') %>">
+                    <%= link_to "Apply Now", "javascript:void(0)", "data-toggle": "modal", "data-target": "#apply-now-modal" %>
+                  </li>
                   <%if current_user.nil?%>
                   <li class="<%#= active_tab('contact_us') %>">
                     <%= link_to "Sign In", new_user_session_path, method: :get, class: "sign-in" %>
@@ -235,5 +238,40 @@
     <div class="back_to_top">
       <i class="fa fa-angle-up"></i>
     </div>
+
+    <!-- Apply now modal START -->
+
+    <div class="modal fade" id="apply-now-modal" role="dialog">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title text-center">Apply Now</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+          <%= form_for @instant_call, :url =>  home_instant_call_path, remote: true, html: { id:  "frm-apply-now", class: "frm-apply-now" } do |f| %>
+              <div class="form-group">
+                <label>Full Name</label>
+                <%= f.text_field(:full_name, class: "form-control") %>
+              </div>
+              <div class="form-group">
+                <label>Mobile Number</label>
+                <%= f.number_field(:mobile_number, class: "form-control") %>
+              </div>
+              <div class="form-group">
+                <label>Products</label>
+                <%= f.select(:product_name, f.object.products, class: "form-control") %>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-custom btn-block">Submit</button>
+              </div>
+            <%end%>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Apply now modal END -->
+
   </body>
 </html>
