--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -20,7 +20,7 @@
         <p>As of now <a href="/">GrowwCapital</a> does not have branches or offices in cities other than Nagpur.  As and when we set up new offices, we will inform our clients and associates via email.</p>
         <p class="pl-about">Mission</p>
         <p>To make a wide range of financial products easily and responsibly accessible to clients, and deliver all products and services efficiently, leveraging technology.</p>
-        <p>Vision</p>
+        <p class="pl-about">Vision</p>
         <p>The canvas of financial services and products is changing at a fast pace. Our vision is to help as many people as we can by offering best offers in products and services we deal in, in transparent & secure environment. We want to earn trust and loyalty of our clients with good services. We want to be a name to reckon with in all markets we operate and expand our area of operations.</p>
         <p>We look forward to serving your smallest need!</p>
         <p class="abt-strip">
@@ -31,7 +31,7 @@
            <span class="bar"> | </span> 
           <span>
             <i class="fa fa-whatsapp"></i>&nbsp;
-            <a href="tel:+918806644344">+91-88066-44344</a>  
+            <a href="tel:+918806644344">+91-88066-44344</a>
           </span>
         </p>
       </div>
