--- a/app/views/home/loan_against_property.html.erb
+++ b/app/views/home/loan_against_property.html.erb
@@ -33,7 +33,7 @@
           <div class="row">
             <div class="col-md-12">
               <label>Your Purpose</label>
-              <%= f.select(:loan_purpose, @loan_against_property.loan_purpose, class: "form-control") %>
+              <%= f.select(:loan_purpose, @loan_against_property.loan_reasons, class: "form-control") %>
             </div>
           </div>
           <button type="submit" class="btn btn-custom btn-block">Submit</button>
