--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,16 +65,16 @@
                   <li class="dropdown">
                       <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">All Products</a>
                       <ul class="dropdown-menu">
-                        <li><%= link_to "Credit Card", credit_card_path('step1'), method: :get %></li>
-                        <li><%= link_to "Personal Loan", personal_loan_path('step1'), method: :get %></li>
-                        <li><%= link_to "Transfer Personal Loan", transfer_personal_loan_path('step1'), method: :get %></li>
-                        <li><%= link_to "Business Loan", business_loan_path('step1'), method: :get %></li>
-                        <li><%= link_to "Professional Loan", professional_loan_path('step1'), method: :get %></li>
-                        <li><%= link_to "Home Loan", home_loan_path('step1'), method: :get %></li>
-                        <li><%= link_to "Transfer Home Loan", transfer_home_loan_path('step1'), method: :get %></li>
-                        <li><%= link_to "Loan Against Property", loan_against_property_path('step1'), method: :get %></li>
-                        <li><%= link_to "New Car Loan", new_car_loan_path('step1'), method: :get %></li>
-                        <li><%= link_to "Used Car Loan", used_car_loan_path('step1'), method: :get %></li>
+                        <li><%= link_to "Credit Card", custom_credit_card_path, method: :get %></li>
+                        <li><%= link_to "Personal Loan", custom_personal_loan_path, method: :get %></li>
+                        <li><%= link_to "Transfer Personal Loan", custom_transfer_personal_loan_path, method: :get %></li>
+                        <li><%= link_to "Business Loan", custom_business_loan_path, method: :get %></li>
+                        <li><%= link_to "Professional Loan", custom_professional_loan_path, method: :get %></li>
+                        <li><%= link_to "Home Loan", custom_home_loan_path, method: :get %></li>
+                        <li><%= link_to "Transfer Home Loan", custom_transfer_home_loan_path, method: :get %></li>
+                        <li><%= link_to "Loan Against Property", custom_loan_against_property_path, method: :get %></li>
+                        <li><%= link_to "New Car Loan", custom_new_car_loan_path, method: :get %></li>
+                        <li><%= link_to "Used Car Loan", custom_used_car_loan_path, method: :get %></li>
                       </ul>
                   </li>
                   <li class="<%#= active_tab('pre_approved') %>">
@@ -119,16 +119,16 @@
                   <li class="dropdown">
                     <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">All Products</a>
                     <ul class="dropdown-menu">
-                      <li><%= link_to "Credit Card", credit_card_path('step1'), method: :get %></li>
-                      <li><%= link_to "Personal Loan", personal_loan_path('step1'), method: :get %></li>
-                      <li><%= link_to "Transfer Personal Loan", transfer_personal_loan_path('step1'), method: :get %></li>
-                      <li><%= link_to "Business Loan", business_loan_path('step1'), method: :get %></li>
-                      <li><%= link_to "Professional Loan", professional_loan_path('step1'), method: :get %></li>
-                      <li><%= link_to "Home Loan", home_loan_path('step1'), method: :get %></li>
-                      <li><%= link_to "Transfer Home Loan", transfer_home_loan_path('step1'), method: :get %></li>
-                      <li><%= link_to "Loan Against Property", loan_against_property_path('step1'), method: :get %></li>
-                      <li><%= link_to "New Car Loan", new_car_loan_path('step1'), method: :get %></li>
-                      <li><%= link_to "Used Car Loan", used_car_loan_path('step1'), method: :get %></li>
+                      <li><%= link_to "Credit Card", custom_credit_card_path, method: :get %></li>
+                      <li><%= link_to "Personal Loan", custom_personal_loan_path, method: :get %></li>
+                      <li><%= link_to "Transfer Personal Loan", custom_transfer_personal_loan_path, method: :get %></li>
+                      <li><%= link_to "Business Loan", custom_business_loan_path, method: :get %></li>
+                      <li><%= link_to "Professional Loan", custom_professional_loan_path, method: :get %></li>
+                      <li><%= link_to "Home Loan", custom_home_loan_path, method: :get %></li>
+                      <li><%= link_to "Transfer Home Loan", custom_transfer_home_loan_path, method: :get %></li>
+                      <li><%= link_to "Loan Against Property", custom_loan_against_property_path, method: :get %></li>
+                      <li><%= link_to "New Car Loan", custom_new_car_loan_path, method: :get %></li>
+                      <li><%= link_to "Used Car Loan", custom_used_car_loan_path, method: :get %></li>
                     </ul>
                   </li>
                   <li class="<%= active_tab('pre_approved') %>">
@@ -194,8 +194,6 @@
             <input type="submit" value="Subscribe" class="md-button" style="cursor: pointer;">
             <% end %>            
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-          </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 padding-right-none md-padding-right-none sm-padding-right-15 xs-padding-right-15">
             <h4>Contact us</h4>
             <div class="footer-contact">
@@ -206,6 +204,13 @@
               </ul>
               <!-- <i class="fa fa-location-arrow back_icon"></i> -->
             </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+            <h4>Work With Us</h4>
+            <ul style="list-style: none; padding: 0px;">
+              <li><a href="/channel_partner">Channel Partner</a></li>
+              <li><a href="/career">Career</a></li>
+            </ul>
           </div>
         </div>
       </div>
