--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -235,7 +235,7 @@
             <%= link_to custom_used_car_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Used Car Loan</h1>
-                <p class="product-desc">Find out about best banks offering pre-owned car loan</p>
+                <p class="product-desc">Find out about best banks offering pre-owned car<br>loan</p>
                 <div class="product-icon">
                   <%= image_tag "icons/used-car-loan-icon.svg", style: "width: 25%; float: right;" %>
                 </div>
@@ -288,7 +288,7 @@
           </div>
         </div>
       </div>
-      <section class="pb-feature-section">
+      <section class="pb-feature-section bpb-feature-section">
         <div class="container">
           <div class="row" id="contentAboutHomes">
             <div class="col-md-5">
